# evt-parser

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
evt_parser/: __init__.py  __main__.py  cli.py  converter.py  exceptions.py  formatters.py  parser.py  utils.py
examples/: basic_usage.py  batch_conversion.py
scripts/: windows_smoketest.py
test_files/: Application.evt  Security.evt  System.evt
tests/: test_cli.py  test_converter.py  test_csv_output.py  test_utils.py
